        "link-layer type plus other stuff" is non-zero.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
    Documentation:
      Document a standard format for writing out BPF filter programs.
    Building and testing:
      Apply GNU Hurd support patch from the Debian package.
      cmake: Update the minimum required version to 2.8.12 (except Windows).
      Makefile.in: Add the releasecheck target.
      Cirrus CI: Add the "make releasecheck" command in the Linux task.
      CI: Introduce and use LIBPCAP_CMAKE_TAINTED.
      CMakeLists.txt: Print "Symlinking: /some/path to ..." conditionally.
      Makefile.in: Add "make -s install" in the releasecheck target.
      Makefile.in: Add the whitespacecheck target.
      Cirrus CI: Run the "make whitespacecheck" command in the Linux task.
      Makefile.in: Add a "touch .devel" command in the releasecheck target.
      autoconf: Add autogen.sh, remove configure and config.h.in and put
        these generated files in the release tarball.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 1.10.4 libpcap release (so far!)
    rpcap:
      Fix name of launchd service.
    Documentation:
      Document use of rpcapd with systemd, launchd, inetd, and xinetd.
    Building and testing:
      Require at least pkg-config 0.17.0, as we use --static.
      Get rid of the remains of gnuc.h.
      Require at least autoconf 2.69.

Thursday, January 12, 2023 / The Tcpdump Group
  Summary for 1.10.3 libpcap release
    Source code:
      Sort the PUBHDR variable in Makefile.in in "ls" order.
      Fix typo in comment in pflog.h.
      Remove two no-longer-present files from .gitignore.
      Update code and comments for handling failure to set promiscuous
        mode based on new information.
    Building and testing: