@@ -26,6 +26,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         another incorporate-remote-capture project. (issue #1120)
     Documentation:
       Document a standard format for writing out BPF filter programs.
+      Document pcap-config better.
     Building and testing:
       Apply GNU Hurd support patch from the Debian package.
       cmake: Update the minimum required version to 2.8.12 (except Windows).
